v7.4.1/_sources/generated/pcdsdevices.mirror.OffsetMirror.rst.txt
pcdsdevices.mirror.OffsetMirror
===============================

.. currentmodule:: pcdsdevices.mirror

.. autoclass:: OffsetMirror

    
    
    .. list-table:: Ophyd Device Components
        :header-rows: 1
        :widths: auto

        * - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
    
        * - lightpath_summary
          - :class:`~pcdsdevices.signal.SummarySignal`
          - 
          - 
          - omitted
          - Inherited from :class:`~pcdsdevices.interface.LightpathMixin`
    
        * - pitch (FCpt)
          - :class:`~pcdsdevices.mirror.Pitch`
          - ``MIRR:{self.prefix}``
          - 
          - hinted
          - 
    
        * - xgantry (FCpt)
          - :class:`~pcdsdevices.mirror.Gantry`
          - ``{self._prefix_xy}:X``
          - 
          - normal
          - 
    
        * - ygantry (FCpt)
          - :class:`~pcdsdevices.mirror.Gantry`
          - ``{self._prefix_xy}:Y``
          - 
          - config
          - 
    

    
    
    
    
    
    
    
    
    

    
    

    
    
    .. rubric:: Methods

    
    .. automethod:: calc_lightpath_state
    .. automethod:: configure
    .. automethod:: describe
    .. automethod:: get
    .. automethod:: get_lightpath_state
    .. automethod:: post_elog_status
    .. automethod:: read
    .. automethod:: read_configuration
    .. automethod:: screen
    .. automethod:: stage_group_instances
    .. automethod:: status
    .. automethod:: stop
    .. automethod:: summary
    .. automethod:: trigger
    
    

    
    
    .. rubric:: Attributes

    
    .. autoattribute:: configuration_attrs
    .. autoattribute:: connected
    .. autoattribute:: hints
    .. autoattribute:: kind
    .. autoattribute:: lightpath_cpts
    .. autoattribute:: md
    .. autoattribute:: needs_parent
    .. autoattribute:: stage_group
    .. autoattribute:: subscriptions
    .. autoattribute:: transmission
    
    